fixed word wrap

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,3 +1,8 @@
-.body{
-  font-family: 'fixed-sys';
+pre {
+  overflow-x: auto;
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
 }
